[package]
name = "bip300-enforcer-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitcoin = "0.32.2"
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[dependencies.bip300301]
git = "https://github.com/Ash-L2L/bip300301.git"
rev = "056e5700bb956cd5c20f27646499ca34f9c74531"
features = ["tracing"]
